--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -1,3 +1,11 @@
-endpoint: ${env:PRISMA_ENDPOINT}
+#endpoint: ${env:PRISMA_ENDPOINT}
+endpoint: https://us1.prisma.sh/recipe-catalog/recipeCatalog/dev
 datamodel: datamodel.graphql
 secret: ${env:PRISMA_SECRET}
+
+generate:
+  - generator: graphql-schema
+    output: ../src/generated/prisma.graphql
+hooks:
+  post-deploy:
+    - graphql get-schema -p prisma
