--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "apollo-link-http": "^1.5.5",
     "apollo-link-ws": "^1.0.9",
     "apollo-utilities": "^1.0.21",
+    "aws-sdk": "^2.560.0",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "cross-fetch": "^2.2.2",
     "env-cmd": "^8.0.2",
     "graphql": "^0.13.2",
@@ -38,7 +40,8 @@
     "graphql-yoga": "^1.14.10",
     "jsonwebtoken": "^8.3.0",
     "prisma-binding": "^2.1.1",
-    "subscriptions-transport-ws": "^0.9.15"
+    "subscriptions-transport-ws": "^0.9.15",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "jest": "^23.5.0",
